--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     </div>
 
     <footer>
-      <p><a href="term.html">查看完整服務條款與隱私權政策</a></p>
+      <p><a href="terms.html">查看完整服務條款與隱私權政策</a></p>
       <p>聯絡我們：<br>
         Facebook：<a href="https://www.facebook.com/CHEisverygood/" target="_blank">https://www.facebook.com/CHEisverygood/</a><br>
         Email：<a href="mailto:cheerfactorysolution@gmail.com">cheerfactorysolution@gmail.com</a>
