--- a/terms.html
+++ b/terms.html
@@ -34,7 +34,7 @@
     <h2>1. 服務內容</h2>
     <ul>
       <li>本平台提供台大、清大、成大、中央、台科大、中興等研究所化工/化材系考古題與解析之線上瀏覽服務。</li>
-      <li>購買後，待平台確認購買程序完成後，將於本人空檔時間手動開通權限，並於服務期限內不限次數瀏覽。</li>
+      <li>購買後，待平台確認購買程序完成後，團隊將盡速手動開通權限，並於服務期限內不限次數瀏覽。</li>
     </ul>
   </section>
   <section>
@@ -81,7 +81,7 @@
   </section>
   <section>
     <h2>3. 資料保存與刪除</h2>
-    <p>所有資料將儲存於 Firebase，並設有存取權限與加密保護。</p>
+    <p>所有資料將儲存於後端伺服器，並設有存取權限與加密保護。</p>
     <p>完成註冊與開通後，平台不會保留任何使用者個人資料。</p>
   </section>
   <section>
@@ -90,7 +90,7 @@
   </section>
   <section>
     <h2>5. 第三方服務</h2>
-    <p>平台串接 Google Firebase、金流商（藍新金流）等服務以提供登入與付款功能，使用者同意遵守相關服務之條款與隱私政策。</p>
+    <p>平台串接後端伺服器、第三方支付金流商平台等服務以提供登入與付款功能，使用者同意遵守相關服務之條款與隱私政策。</p>
   </section>
 </body>
 </html>
