--- a/terms.html
+++ b/terms.html
@@ -26,9 +26,43 @@
     ul {
       padding-left: 20px;
     }
+    header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 30px;
+    }
+    header img {
+      height: 50px;
+      border-radius: 8px;
+    }
+    .back-link {
+      font-size: 14px;
+      background-color: #0077cc;
+      color: white;
+      padding: 8px 14px;
+      border-radius: 8px;
+      text-decoration: none;
+    }
+    .back-link:hover {
+      background-color: #005fa3;
+    }
+    footer {
+      text-align: center;
+      font-size: 14px;
+      color: #777;
+      border-top: 1px solid #ccc;
+      padding-top: 20px;
+      margin-top: 50px;
+    }
   </style>
 </head>
 <body>
+  <header>
+    <img src="https://raw.githubusercontent.com/WOODYHU9512/cheisgood/main/%E7%9C%9F%E6%AD%A3LOGO.jpeg" alt="CHE Logo">
+    <a href="index.html" class="back-link">← 返回首頁</a>
+  </header>
+
   <h1>服務條款</h1>
   <section>
     <h2>1. 服務內容</h2>
@@ -92,5 +126,13 @@
     <h2>5. 第三方服務</h2>
     <p>平台串接後端伺服器、第三方支付金流商平台等服務以提供登入與付款功能，使用者同意遵守相關服務之條款與隱私政策。</p>
   </section>
+
+  <footer>
+    <p>聯絡我們：<br>
+      Facebook：<a href="https://www.facebook.com/CHEisverygood/" target="_blank">https://www.facebook.com/CHEisverygood/</a><br>
+      Email：<a href="mailto:cheerfactorysolution@gmail.com">cheerfactorysolution@gmail.com</a>
+    </p>
+    <p>© 2025 化工製造所</p>
+  </footer>
 </body>
 </html>
