--- a/terms.html
+++ b/terms.html
@@ -28,15 +28,25 @@
     }
     header {
       display: flex;
+      flex-direction: column;
       align-items: center;
-      justify-content: space-between;
+      justify-content: center;
       margin-bottom: 30px;
     }
     header img {
-      height: 50px;
-      border-radius: 8px;
+      height: 80px;
+      border-radius: 10px;
+      margin-bottom: 10px;
+    }
+    .header-title {
+      font-size: 20px;
+      font-weight: bold;
+      text-align: center;
     }
     .back-link {
+      position: absolute;
+      top: 20px;
+      right: 30px;
       font-size: 14px;
       background-color: #0077cc;
       color: white;
@@ -58,9 +68,10 @@
   </style>
 </head>
 <body>
+  <a href="index.html" class="back-link">← 返回首頁</a>
   <header>
     <img src="https://raw.githubusercontent.com/WOODYHU9512/cheisgood/main/%E7%9C%9F%E6%AD%A3LOGO.jpeg" alt="CHE Logo">
-    <a href="index.html" class="back-link">← 返回首頁</a>
+    <div class="header-title">【化工製造所】 - 專業化工所考古題詳解服務條款</div>
   </header>
 
   <h1>服務條款</h1>
