--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>化工製造所｜研究所考古題平台</title>
+  <title>【化工製造所】 - 專業化工所考古題詳解｜化工所考古題平台</title>
   <link rel="stylesheet" href="style.css">
   <style>
     .school-preview-grid {
