--- a/index.html
+++ b/index.html
@@ -176,16 +176,16 @@
       <h2>🛒 購買流程</h2>
       <div class="flow-buttons">
         <div class="flow-button">
-          註冊帳號密碼<br>
+          第一步、註冊帳號密碼<br>
           <small>填寫基本資料送出</small>
         </div>
         <div class="flow-button">
-          確認付款<br>
-          <small>支援街口/銀行轉帳/超商代碼/條碼</small>
+          第二步、確認付款<br>
+          <small>支援街口轉帳/銀行轉帳/超商代碼/條碼</small>
         </div>
         <div class="flow-button">
-          等待人工開通<br>
-          <small>開通後可立即瀏覽考古題</small>
+          第三部、等待人工開通<br>
+          <small>開通後可立即瀏覽考古題！</small>
         </div>
       </div>
     </div>
