--- a/signup.html
+++ b/signup.html
@@ -78,6 +78,18 @@
   </style>
 </head>
 <body>
+  <a href="index.html" style="
+  position: fixed;
+  top: 20px;
+  right: 30px;
+  background-color: #0077cc;
+  color: white;
+  padding: 8px 14px;
+  border-radius: 8px;
+  text-decoration: none;
+  font-size: 14px;
+  z-index: 999;
+">← 返回首頁</a>
   <div class="header">
     <img src="https://raw.githubusercontent.com/WOODYHU9512/cheisgood/main/%E7%9C%9F%E6%AD%A3LOGO.jpeg" alt="logo">
     <h2>化工製造所註冊與付款登記系統</h2>
