--- a/signup.html
+++ b/signup.html
@@ -116,7 +116,7 @@
   <label>設定觀看帳號(請自行記錄)：<input type="text" id="username" required></label>
   <label>設定觀看密碼(請自行記錄)：<input type="password" id="password" required></label>
 
-  <button onclick="submitForm()">送出申請(請按一次就好）</button>
+  <button onclick="submitForm()">送出申請(按一次並耐心稍等）</button>
   <button onclick="clearForm()">清空所有欄位</button>
 
   <footer>
