--- a/index.html
+++ b/index.html
@@ -173,22 +173,25 @@
     </p>
 
     <div class="flow-section">
-      <h2>🛒 購買流程</h2>
-      <div class="flow-buttons">
-        <div class="flow-button">
-          第一步、註冊帳號密碼<br>
-          <small>填寫基本資料送出</small>
-        </div>
-        <div class="flow-button">
-          第二步、確認付款<br>
-          <small>支援街口轉帳/銀行轉帳/超商代碼/條碼</small>
-        </div>
-        <div class="flow-button">
-          第三部、等待人工開通<br>
-          <small>開通後可立即瀏覽考古題！</small>
-        </div>
-      </div>
+  <h2>🛒 購買流程（參考）</h2>
+  <div class="flow-buttons">
+    <div class="flow-button">
+      第一步、註冊帳號密碼<br>
+      <small>填寫基本資料（含付款資料）送出</small>
     </div>
+    <div class="flow-button">
+      第二步、確認付款<br>
+      <small>支援街口轉帳 / 銀行轉帳 / 超商代碼 / 條碼</small>
+    </div>
+    <div class="flow-button">
+      第三步、等待人工開通<br>
+      <small>開通後可立即瀏覽考古題！</small>
+    </div>
+  </div>
+  <p style="font-size: 0.9em; color: #666; margin-top: 1em;">
+    *詳細流程因付款方式而異，請參考註冊頁面各付款方式教學。
+  </p>
+</div>
 
     <h2>🖼️ 考古題畫面預覽</h2>
     <div class="school-preview-grid" id="previewGrid"></div>
