--- a/signup.html
+++ b/signup.html
@@ -172,7 +172,7 @@
     html = `<label>您的藍新金流交易序號：<input type="text" id="accountInput"></label>
             <p class="note"><a href="https://drive.google.com/file/d/1-DSfdOOf8_IbeNkdinuoiTZYvD0G83J4/view?usp=drive_link" target="_blank">超商代碼付款教學</a></p>
             ${newebpayLinkHTML}`;
-  } else if (method === "銀行轉帳") {
+  } else if (method === "銀行轉帳（含手機網銀）") {
     html = `<label>您的藍新金流交易序號：<input type="text" id="accountInput"></label>
             <p class="note"><a href="https://drive.google.com/file/d/1-ByDuzrx8kaq3QwI5KcCgckSBiCYa68J/view?usp=drive_link" target="_blank">銀行轉帳（含手機網銀）教學</a></p>
             ${newebpayLinkHTML}`;
