--- a/index.html
+++ b/index.html
@@ -156,18 +156,18 @@
 
     <h2>💰 方案價格</h2>
     <ul>
-      <li>台大全部：NT$700（含103~113單操輸送 化熱化反 工數）</li>
-      <li>清大全部：NT$800（含103~113單操輸送 化熱化反）</li>
-      <li>成大全部：NT$800（含103~113單操輸送 化熱 化反）</li>
-      <li>中央全部：NT$600（含103~113單操輸送 化熱化反）</li>
-      <li>台科大全部：NT$600（含104~113單操輸送 化熱化反 工數）</li>
-      <li>中興全部：NT$600（含104~112單操輸送 化熱化反 工數）</li>
+      <li>台大全部：NT$600（含103~114單操輸送 化熱化反 工數）</li>
+      <li>清大全部：NT$700（含103~114單操輸送 化熱化反）</li>
+      <li>成大全部：NT$700（含103~114單操輸送 化熱 化反）</li>
+      <li>中央全部：NT$550（含103~114單操輸送 化熱化反）</li>
+      <li>台科大全部：NT$550（含103~114單操輸送 化熱化反 工數）</li>
+      <li>中興全部：NT$550（含"104"~114單操輸送 化熱化反 工數）</li>
     </ul>
     <p><strong>※優惠：</strong><br>
-      ● 兩間學校：折150元<br>
-      ● 三間學校：折250元<br>
-      ● 四間學校：折400元<br>
-      ● 五間學校：折550元<br>
+      ● 兩間學校：折200元<br>
+      ● 三間學校：折300元<br>
+      ● 四間學校：折500元<br>
+      ● 五間學校：折700元<br>
       ● 六間學校：折900元<br>
       <em>(需一次購買，不可累積折扣；若需購買六間請先私訊)</em>
     </p>
