--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       ● 四間學校：折500元<br>
       ● 五間學校：折700元<br>
       ● 六間學校：折900元<br>
-      <em>(需一次購買，不可累積折扣；若需購買六間請先私訊)</em>
+      <em>(需一次購買，不可分次累積折扣)</em>
     </p>
 
     <div class="flow-section">
